<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juniordamacena.jogo.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuPricipalTituloBoasVindas"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNovoJogoMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMenu"
            android:text="@string/menuPricipalBtnModo2Jogadores" />

        <Button
            android:id="@+id/btnNovoJogoSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMenu"
            android:text="@string/menuPricipalBtnModo1Jogador" />

        <Button
            android:id="@+id/btnRecordes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMenu"
            android:text="@string/menuPricipalBtnRecordes" />

        <Button
            android:id="@+id/btnSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickMenu"
            android:text="@string/menuPricipalBtnSair" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/btnToggleSom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/menuPricipalBtnSom"
        android:textOff="@string/menuPricipalBtnSemSom"
        android:textOn="@string/menuPricipalBtnComSom" />

</RelativeLayout>
